# blog

./: Gemfile  pyproject.toml
.github/: check_bump_version.py
.github/workflows/: github-actions-demo.yml  learn-github-actions.yml
config/: database.yml  secrets.yml
